add docker login

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,6 +10,7 @@ server {
 	listen 80;
 
 	# if request to / comes in, redirect it to http://client
+	# we're able to write http://client because of grouping of containers (services in docker-compose.yml)
 	location / {
 		proxy_pass http://client;
 	}
