--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -4,34 +4,26 @@ services:
     image: 'postgres:latest'
     environment:
       - POSTGRES_PASSWORD=postgres_password
-
   redis:
     image: 'redis:latest'
-
   nginx:
+    depends_on:
+      - api
+      - client
     restart: always
     build:
       dockerfile: Dockerfile.dev
       context: ./nginx
     ports:
-      # 3050 on localhost 80 in the container
       - '3050:80'
-
   api:
     build:
       dockerfile: Dockerfile.dev
       context: ./server
     volumes:
-      # inside the container, don't override it or redirect access to it
       - /app/node_modules
-      # anytime out application try to access anything in /app, it's gonna be redirected to ./server
-      # (except node_modules)
       - ./server:/app
-    # key (values retrieved from local computer)
-    # key=value
     environment:
-      # url server uses to connect to Redis
-      # the name of the service defined on line 8
       - REDIS_HOST=redis
       - REDIS_PORT=6379
       - PGUSER=postgres
@@ -39,23 +31,22 @@ services:
       - PGDATABASE=postgres
       - PGPASSWORD=postgres_password
       - PGPORT=5432
-    
   client:
+    environment:
+      - WDS_SOCKET_PORT=0
     build:
       dockerfile: Dockerfile.dev
       context: ./client
     volumes:
       - /app/node_modules
       - ./client:/app
-    environment:
-      - WDS_SOCKET_PORT=0
   worker:
     build:
       dockerfile: Dockerfile.dev
       context: ./worker
     volumes:
       - /app/node_modules
-      - ./worker:/app 
+      - ./worker:/app
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
